add google analytics + title/keywords

--- a/index.html
+++ b/index.html
@@ -1,4 +1,16 @@
 <head>
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-179223880-1"></script>
+	<script>
+	window.dataLayer = window.dataLayer || [];
+	function gtag(){dataLayer.push(arguments);}
+	gtag('js', new Date());
+
+	gtag('config', 'UA-179223880-1');
+	</script>
+
+	<title>vote 2020</title>
+	<meta name="keywords" content="vote, election, 2020 election">
   <script src="index.js"></script>
   <link rel="stylesheet" href="styles.css">
   <link rel="stylesheet" href="fancy-dropdown.css">
