add more meta tags, change title, fix ND case

--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
 	gtag('config', 'UA-179223880-1');
 	</script>
 
-	<title>vote 2020</title>
-	<meta name="keywords" content="vote, election, 2020 election">
+	<title>2020 election: voting timelines</title>
+  <meta name="description" content="find out how to vote in the 2020 election in your state">
+	<meta name="keywords" content="vote, election, 2020 election, voting timeline, voting, timeline">
   <script src="index.js"></script>
   <link rel="stylesheet" href="styles.css">
   <link rel="stylesheet" href="fancy-dropdown.css">
@@ -96,7 +97,7 @@
         <div id="election-day-icon" class="icon">&#127482;&#127480;</div>
     </div>
     <div class="text">
-      <p class="info">&#9997; <b><span id="days-to-reg"></span></b> days until registration deadline: <b><span id="reg-deadline"></span></b></p>
+      <p id="reg" class="info">&#9997; <b><span id="days-to-reg"></span></b> days until voter registration deadline: <b><span id="reg-deadline"></span></b></p>
       <p id="ballot-req" class="info">&#x1F4E8; <b><span id="days-to-ballot"></span></b> days until ballot application deadline: <b><span id="ballot-deadline"></span></b></p>
       <p id="ballot-postmark" class="info">&#128236; <b><span id="days-to-postmark"></span></b> days until ballot must be postmarked: <b><span id="ballot-postmarked-deadline"></span></b></p>
       <p class="info">&#128499; <b><span id="days-to-submit"></span></b> days until ballot must be received: <b><span id="ballot-submit-deadline"></span></b></p>
